[package]
name = "internal-mcp"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
rmcp = { version = "0.6.1", features = ["schemars", "transport-io"] }
schemars = "1.0.4"
serde = "1.0.219"
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
